2001-06-01  Mo DeJong  <mdejong@redhat.com>

	* config.guess:
	* config.sub: Update from net versions to add
	the new windows32 host option.
	* src/m4/acx_check_pathname_style.m4 (ACX_CHECK_PATHNAME_STYLE_DOS):
	Add *windows32* to the set of targets that support
	DOS style pathnames.

2001-06-01  Mo DeJong  <mdejong@redhat.com>

	* src/option.cpp (ArgumentExpanded, ArgumentExpander): Rename
	ArgumentExpanded to ExpandAtFileArgument. Change parsing so
	@files are treated as one filename per line instead of
	space or tab separated file names.
	* src/option.h (ArgumentExpanded): Rename ArgumentExpanded
	to ExpandAtFileArgument.

2001-05-28  Pascal Davoust  <davoustp@yahoo.com>

	* src/double.h: Add (u4) cast to IEEEfloat constructor
	calls to avoid bad code generation with VC++.

2001-05-26  Eric Blake  <ebb9@email.byu.edu>

	* src/expr.cpp (Semantic::ProcessConditionalExpression):
	Add a missing return that caused a regression in
	Jikes 1.14. An assertion was being raised when a ?:
	expression mixed a primitive and reference type
	in the second and third operands.

2001-05-17  Chris Abbey  <cabbey@bresnanlink.net>

	* option.cpp:
	* control.cpp: Completed the removal of EBCDIC related
	code that Vadim started in October 1999. (it was all
	dead code after the preprocessor ran anyway.) If support
	for EBCDIC is ever put back in it should be done through
	the API and ICU/iconv.
	* platform.h: replaced comment explaining the U_ enums.

2001-05-13  Chris Abbey  <cabbey@bresnanlink.net>

	Released Jikes 1.14, Happy Mother's Day.

2001-05-13  Chris Abbey  <cabbey@bresnanlink.net>

	* jikes.spec: added %doc for documentation files,
	and changed jikes.1 to jikes.1.gz because the rpm
	build process automatically compresses man pages,
	but doesn't reflect this in the %files section.

2001-05-11  Chris Abbey  <cabbey@bresnanlink.net>

	* src/stream.cpp (Stream::DecodeNextCharacter): fixed
	core fault in parser because we cast a char to a wchar_t